--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,70 +1,107 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#e2a600"
+    android:orientation="vertical"
     tools:context=".AuthActivity">
+        <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#e2a600"
+                android:orientation="vertical"
+                tools:context=".AuthActivity">
 
-    <TextView
-        android:id="@+id/main_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/alexandria_bold"
-        android:textColor="#fdfdfd"
-        android:layout_gravity="center"
-        android:layout_marginTop ="170dp"
-        android:textSize ="25sp"
-        android:textStyle="bold"
-        android:text="Войдите в аккаунт" />
+                <TextView
+                    android:id="@+id/main_activity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="80dp"
+                    android:fontFamily="@font/alexandria_bold"
+                    android:text="Войдите в аккаунт"
+                    android:textColor="#fdfdfd"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/user_login_auth"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.492"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.361"
+                    tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/user_login_auth"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Введите логин"
-        android:inputType="text"
-        android:textColor="#fdfdfd"
-        android:textColorHint="#6a6a6a" />
+                <EditText
+                    android:id="@+id/user_login_auth"
+                    android:layout_width="220dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="80dp"
+                    android:ems="10"
+                    android:hint="Введите логин"
+                    android:inputType="text"
+                    android:textColor="#fdfdfd"
+                    android:textColorHint="#6a6a6a"
+                    app:layout_constraintBottom_toTopOf="@+id/user_pass_auth"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.497"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/user_pass_auth"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Введите пароль"
-        android:inputType="textPassword"
-        android:textColor="#fdfdfd"
-        android:textColorHint="#6a6a6a" />
+                <EditText
+                    android:id="@+id/user_pass_auth"
+                    android:layout_width="220dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:ems="10"
+                    android:hint="Введите пароль"
+                    android:inputType="textPassword"
+                    android:textColor="#fdfdfd"
+                    android:textColorHint="#6a6a6a"
+                    app:layout_constraintBottom_toTopOf="@+id/button_auth"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.497"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/button_auth"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:textSize="16sp"
-        android:backgroundTint="#201E28"
-        android:layout_marginTop="30dp"
-        android:text="Войти" />
+                        <Button
+                            android:id="@+id/button_auth"
+                            android:layout_width="220dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="120dp"
+                            android:backgroundTint="#201E28"
+                            android:text="Войти"
+                            android:textColor="#fff"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toTopOf="@+id/link_to_reg"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.497"
+                            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/link_to_reg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="120dp"
-        android:fontFamily="cursive"
-        android:text="Зарегистрироваться"
-        android:textColor="#fdfdfd"
-        android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/link_to_reg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="220dp"
+                    android:fontFamily="cursive"
+                    android:text="Зарегистрироваться"
+                    android:textColor="#fdfdfd"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints" />
 
-</LinearLayout>
+        </LinearLayout>
+</ScrollView>
